erDiagram
    PROFILES {
        uuid id PK
        string name
        string email
        string phone
    }

    SERVICES {
        uuid id PK
        string name
        string category
        int duration_minutes
        float price
        boolean is_active
        datetime updated_at
    }

    THERAPISTS {
        uuid id PK
        string name
        string title
        string photo_url
        text bio_short
        boolean is_active
    }

    THERAPIST_SERVICE {
        uuid id PK
        uuid service_id FK
        uuid therapist_id FK
    }

    SERVICE_IMAGES {
        uuid id PK
        uuid service_id FK
        string image_url
        int sort_order
    }

    TIME_SLOTS {
        uuid id PK
        uuid therapist_id FK
        datetime start_time
        datetime end_time
        boolean is_available
        datetime locked_until
    }

    BOOKINGS {
        uuid id PK
        uuid customer_id FK
        uuid service_id FK
        uuid therapist_id FK
        uuid time_slot_id FK
        string status
        string reference_code
        datetime created_at
    }

    MESSAGES {
        uuid id PK
        string name
        string email
        string subject
        text message
        boolean is_read
        datetime created_at
    }

    PROFILES ||--o{ BOOKINGS : "places"
    SERVICES ||--o{ THERAPIST_SERVICE : "has"
    THERAPISTS ||--o{ THERAPIST_SERVICE : "assigned_to"
    SERVICES ||--o{ SERVICE_IMAGES : "has"
    THERAPISTS ||--o{ TIME_SLOTS : "offers"
    TIME_SLOTS ||--o{ BOOKINGS : "reserved_by"
    PROFILES ||--o{ MESSAGES : "sends"
